# tutorial

cmake/t1/: CMakeLists.txt  main.cpp
cmake/t2/doc/: hello.txt
gym/: .gitignore  Untitled.ipynb  cartpole.py  cartpole_dqn.ipynb  cartpole_dqn.py  cartpole_pg.ipynb  cartpole_pg.py  cartpole_pg.py~  pendulum_ddpg.ipynb  pendulum_ddpg.py  pendulum_dpg.ipynb  policy_gradient.ipynb
gym/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  cartpole_dqn-checkpoint.ipynb
jupyter/: cmd
linux/: a.out  in.cpp
matplotlib/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  anim.py  drip.py  drip.py~
perl/: hello.pl  print.pl  regexp.pl  tmp
protobuf/cmake_version/: CMakeLists.txt
protobuf/cmake_version/python/: CMakeLists.txt
protobuf/cmake_version/src/proto/: CMakeLists.txt
protobuf/comm/: py.txt  test.py  x.proto  x_pb2.py
protobuf/cpp/: data.txt  x  x.cpp
protobuf/python/: log  message.proto  message_pb2.py  test.py
protobuf/uav/: .uav.cpp.swp  cmd  data.txt  scene.pb.cc  scene.pb.h  scene.proto  scene_pb2.py  uav  uav.cpp  uav.py
python/: Untitled.ipynb  Untitled1.ipynb  caller.py  hello.py
python/module_package/: .test.py.swp  test.py
python/optictrack/: PythonSample.py
python/pkg_resources/: .test.py.swp  test.py
python/pyquaternion/: pyquaternion.ipynb
python/rpyc/: client.py  server.py
python/scipy/: SLSQP.ipynb
python/serial/: client.py  server.py
pytorch/: autograd_tutorial.ipynb  batch_norm.ipynb
seaborn/: seaborn.ipynb  ws.ipynb
shell/: var.sh
uav/: Env.py  main.py  rpyc_client.py  rpyc_server.py  ser_client.py  ser_server.py
(+14 files in other folders)
