#FIND_LIBRARY()
FIND_PACKAGE(Protobuf REQUIRED)
FILE(GLOB protofiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
PROTOBUF_GENERATE_CPP(PROTOSRCS PROTOHDRS ${protofiles})
ADD_LIBRARY(proto STATIC ${PROTOSRCS} ${PROTOHDRS})
TARGET_LINK_LIBRARIES(proto protobuf)
TARGET_INCLUDE_DIRECTORIES(proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

